<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.3</version>
        <relativePath />
    </parent>

    <groupId>org.kgrid</groupId>
    <artifactId>kgrid-activator</artifactId>
    <version>1.6.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <!-- More Project Information -->
    <name>kgrid-activator</name>
    <description>KGrid: Activator</description>

    <scm>
        <url>https://github.com/kgrid/kgrid-activator</url>
        <connection>scm:git:https://github.com/kgrid/kgrid-activator.git</connection>
        <developerConnection>scm:git:https://github.com/kgrid/kgrid-activator.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <!-- override spring boot parent; sets java source & target -->
        <java.version>11</java.version>
        <!-- these can be overridden at the command line, e.g. -Dmaven.deploy.skip=false -->
        <maven.gitcommitid.skip>false</maven.gitcommitid.skip>
        <maven.deploy.skip>true</maven.deploy.skip>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
        <mockito.version>3.5.5</mockito.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.hateoas</groupId>
            <artifactId>spring-hateoas</artifactId>
            <version>0.25.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>


        <!--test scope-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- kgrid specific -->
        <dependency>
            <groupId>org.kgrid</groupId>
            <artifactId>adapter-api</artifactId>
            <version>1.1.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.kgrid</groupId>
            <artifactId>shelf-api</artifactId>
            <version>3.1.7</version>
        </dependency>
        <dependency>
            <groupId>org.kgrid</groupId>
            <artifactId>proxy-adapter</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.kgrid</groupId>
            <artifactId>javascript-v8-adapter</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.kgrid</groupId>
            <artifactId>resource-adapter</artifactId>
            <version>0.1.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <layers>
                        <enabled>true</enabled>
                    </layers>
                    <image>
                        <env>
                            <BP_JVM_VERSION>11.*</BP_JVM_VERSION>
                        </env>
                    </image>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <configuration>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>jib-maven-plugin</artifactId>
                <configuration>
                    <to>
                        <image>kgrid/${project.artifactId}:${project.version}</image>
                        <tags>
                            <tag>latest</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                </configuration>
                <groupId>com.google.cloud.tools</groupId>
                <version>3.1.1</version>
            </plugin>
        </plugins>
    </build>
</project>
